packages/webassemblyjs/test/fixtures/type-errors/nested-blocks/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Expected type ANY but got none."
  );
});
